# MultiAMR-FMS

./: README.md
config/: domain_bridge_1542.yaml  domain_bridge_b44f.yaml  domain_bridge_c0bd.yaml
executor/actions/: follow_aruco_launch.py  goal_mover_launch_visionavoid.py  goal_mover_obs_visionavoid .py  package.xml  setup.py
executor/actions/launch/: marker_static_tf.launch.py
executor/controller/: controller_domainbridge.py  package.xml  setup.py
executor/controller/launch/: controller.launch.py
fms/orchestrator/: orchestrator.py  package.xml  setup.py
fms/orchestrator/launch/: orchestrator.launch.py
fms/traffic_manager/: package.xml  setup.py  traffic_manager.py
nav2_params/: nav2_params.yaml
pinky_interfaces/: CMakeLists.txt  package.xml
pinky_interfaces/action/: ExecuteMission.action  FollowAruco.action  MoveToPID.action
pinky_interfaces/msg/: RobotState.msg
sensors/: battery_publisher.py  image_socket_server.py  map_wall_xy_near_robot.py  package.xml  setup.py
vision/: tcp_frame_client.py  vision_avoid_depthpro.py  vision_avoid_publisher_yolo.py  vision_yolo_map_to_obj.py
