<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="pinky@todo.todo">pinky</maintainer>
  <license>TODO: License declaration</license>

  <!-- ✅ 런타임/빌드시 필요한 ROS 의존성 -->
  <exec_depend>rclpy</exec_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>

  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_py</exec_depend>

  <!-- ✅ 너의 커스텀 인터페이스 -->
  <exec_depend>pinky_interfaces</exec_depend>

  <!-- (권장) -->
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>action_msgs</exec_depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
